# my-first-llm-agent

./: README.md  agent.py  agent_base.py  agent_config.py  agent_delivery_report.py  agent_requirements_analyst.py  agent_task_list.py  busy_animation.py  calculatortool.py  prompt.txt  prompt_analyst.md  pyproject.toml  requirements.txt  sample-tickets.md  test_agent.py  timetool.py  toolbox.py
agent/: __init__.py  agent.py  agent_config.py  agent_toolbox.py  timer_window.py  voice_to_text.py
agent_scripts/: _00_agent_template_prompt.yml  _default_agent.yml  delivery_fortnightly_report.yml  delivery_summary_report.yml  delivery_ticket_analysis.yml  project_task_list.yml  requirements_gap_analysis.yml  requirements_risk_analysis.yml  system_analyst_requirements.yml
agent_tools/: confluence_page_search.py  file_io_tool.py  slack_tool.py
agents/: _default_agent.yml  delivery_fortnightly_report.yml  system_analyst_requirements.yml
examples/: _example_config.py  gap_analysis_agent.py  no_tool_default_agent.py  risk_analysis_agent.py  summary_report_agent.py  ticket_generator_agent.py
prd_templates/: api.prd  dashboard.prd  general.prd
prds/: Dashboard_Requirements.md  output.txt  requirements.txt  {filename}.txt
prompts/: prompt.txt  prompt_analyst.md  prompt_delivery_lead.md  prompt_delivery_report.md  prompt_delivery_report_old.md  prompt_simple_write_to_disk_test.md  prompt_task_list.md
sample_data/: stakeholders.md
tools/: __init__.py  calculatortool.py  filewritertool.py  jira_epics.py  jira_project.py  jira_tickets.py  prdtemplatestool.py  timetool.py  (+1 more)
(+11 files in other folders)
